added javadocs for all firebase.dao files